feat(entitlement): add crud and plan apis
